# meridian-rs

./: .dockerignore  .env.example  .gitignore  BUILD_QUICK_REFERENCE.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  Dockerfile  KOMODO_DEPLOYMENT.md  README.md  build.sh  docker-compose.yml  komodo-compose.yml  package-lock.json  package.json  user-config.example.json
backend/src/: main.rs  web.rs
backend/src/agent/: loop_.rs
backend/src/state/: positions.rs
backend/src/tools/: dlmm.rs  executor.rs  meteora_native.rs
docs/: production-operations.md
scripts/: dev-all.ps1  start-backend.ps1
src/: agent.rs  cli.rs  config.rs  cycle.rs  docs_quality.rs  lessons.rs  llm.rs  main.rs  middleware.ts  models.rs  ops.rs  state.rs  strategy_library.rs  tools.rs  utils.rs  web.rs
src/agent/: loop_.rs  prompt.rs  roles.rs
src/app/: page.tsx
src/app/api/radar/: route.ts
src/components/auth/: AuthGate.tsx  LockScreen.tsx
src/components/layout/: ChartGridView.tsx  DashboardLayout.tsx  DashboardView.tsx  Dock.tsx  Sidebar.tsx  Topbar.tsx
src/components/trading/: PortfolioWidget.tsx  PositionTable.tsx  PositionsCard.tsx
src/components/widgets/: ActivityWidget.tsx  BackendControlWidgets.tsx  CandidateWidget.tsx  ChartWidget.tsx
src/config/: defaults.rs  llm_config.rs  loader.rs  types.rs
src/lib/: auth.ts
src/models/: pool.rs  position.rs  token.rs
src/state/: pool_memory.rs  positions.rs
src/styles/: theme.css
src/tools/: blacklist.rs  definitions.rs  dlmm.rs  executor.rs  screening.rs  smart_wallets.rs  token.rs  wallet.rs
src/utils/: logger.rs  math.rs
(+6 files in other folders)
