[package]
name = "meridian-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
chrono = "0.4"

# Solana
solana-sdk = "2"
solana-client = "2"

# Web Framework (for future HyperOS-style UI)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }